--- a/general/pages/ai.html
+++ b/general/pages/ai.html
@@ -44,8 +44,9 @@
         <br>
         <div class="chat-container">
             <div id="chat-box"></div>
-            <input type="text" id="user-input" placeholder="Type your message here...">
+            <input type="text" id="user-input" placeholder="Enter your prompt here...">
             <button id="send-button">Send</button>
+            <button id="send-button" onclick="window.location.reload();">Clear</button>
         </div>
     </body>
 </html><script src="/general/js/cloak.js"></script>
