--- a/general/pages/arcade.html
+++ b/general/pages/arcade.html
@@ -96,6 +96,146 @@
                         <p>Space game</p> <!-- Shortened description -->
                     </div>
                 </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
+                <div class="column" data-category="">
+                    <img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description -->
+                    </div>
+                </div>
             </div>
     </body>
 </html><script src="/general/js/cloak.js"></script>
