--- a/general/pages/dashboard.html
+++ b/general/pages/dashboard.html
@@ -53,7 +53,7 @@
            <center> 
             <a href="/general/pages/partnership.html"><button class="button">Partnerships</button></a>&nbsp;&nbsp;&nbsp;
             <a href="/general/pages/credits.html"><button class="button">Credits</button></a>&nbsp;&nbsp;&nbsp;
-            <a href="/general/pages/terms.html"><button class="button">Terms</button></a>&nbsp;&nbsp;&nbsp;
+            <a href="https://infamyy.vercel.app/" target="_blank"><button class="button">About me</button></a>&nbsp;&nbsp;&nbsp;
             <a href="/general/pages/policy.html"><button class="button">Policy</button></a>&nbsp;&nbsp;&nbsp;
            </center>
        <br>
