--- a/general/pages/ai.html
+++ b/general/pages/ai.html
@@ -45,8 +45,10 @@
         <div class="chat-container">
             <div id="chat-box"></div>
             <input type="text" id="user-input" placeholder="Enter your prompt here...">
+            <div class="row">
             <button id="send-button">Send</button>
             <button id="send-button" onclick="window.location.reload();">Clear</button>
+            </div>
         </div>
     </body>
 </html><script src="/general/js/cloak.js"></script>
