--- a/general/pages/ai.html
+++ b/general/pages/ai.html
@@ -45,7 +45,7 @@
         <div class="chat-container">
             <div id="chat-box"></div>
             <input type="text" id="user-input" placeholder="Enter your prompt here...">
-            <div class="row">
+            <div class="roww">
             <button id="send-button">Send</button>
             <button id="send-button" onclick="window.location.reload();">Clear</button>
             </div>
