--- a/general/pages/policy.html
+++ b/general/pages/policy.html
@@ -27,11 +27,12 @@
         <nav>
             <a href="/general/index.html" class="left-link">Starlight</a>
             <div class="nav-links">
-                <a href="/general/pages/arcade.html"><img src="/img/arcade.png" height="13px" width="13px">&nbsp;Arcade</a>
-                <a href="/general/pages/utilities.html"><img src="/img/apps.png" height="13px" width="13px">&nbsp;Utilities</a>
-                <a href="/general/pages/media.html"><img src="/img/movies.png" height="13px" width="13px">&nbsp;Media</a>
-                <a href="/general/pages/ai.html"><img src="/img/ai.png" height="13px" width="13px">&nbsp;AI</a>
-                <a href="/general/pages/settings.html"><img src="/img/settings.png" height="13px" width="13px">&nbsp;Settings</a>
+                <a href="/general/pages/arcade.html"><img src="/img/arcade.png" height="11px" width="11px">&nbsp;Arcade</a>
+                <a href="/general/pages/utilities.html"><img src="/img/apps.png" height="11px" width="11px">&nbsp;Utilities</a>
+                <a href="/general/pages/media.html"><img src="/img/movies.png" height="11px" width="11px">&nbsp;Media</a>
+                <a href="/general/pages/ai.html"><img src="/img/ai.png" height="11px" width="11px">&nbsp;AI</a>
+                <a href="/general/pages/search.html"><img src="/img/search.png" height="11px" width="11px">&nbsp;Search</a>
+                <a href="/general/pages/settings.html"><img src="/img/settings.png" height="11px" width="11px">&nbsp;Settings</a>
             </div>
         </nav>
         <br>
@@ -69,10 +70,11 @@
             </h2>
             <br>
             </div>
-            <div style="font-family: sans-serif;">
-            Last updated on Monday, October 1 Tuesday
+            <div>
+            Last updated on Monday, October 1, Tuesday
             </div>
-     
+     <br>
+     <br>
     </body><script src="/general/js/cloak.js"></script>
 </html>
     <!-- Include Particle.js library -->
