--- a/general/pages/arcade.html
+++ b/general/pages/arcade.html
@@ -42,6 +42,8 @@
         <br>
         <br>
         <br>
+        <div id="text">Starlight's Arcade</div>
+        <br>
         <center>
             <select id="categorySelect">
                 <option value="">All</option>
