--- a/general/pages/ai.html
+++ b/general/pages/ai.html
@@ -43,6 +43,8 @@
         <br>
         <br>
         <br>
+        <div class="text">Starlight's AI</div>
+        <br>
         <div class="chat-container">
             <div id="chat-box"></div>
             <input type="text" id="user-input" placeholder="Enter your prompt here...">
