--- a/general/pages/arcade.html
+++ b/general/pages/arcade.html
@@ -42,7 +42,7 @@
         <br>
         <br>
         <br>
-        <div id="text">Starlight's Arcade</div>
+        <div class="text">Starlight's Arcade</div>
         <br>
         <center>
             <select id="categorySelect">
