--- a/general/pages/utilities.html
+++ b/general/pages/utilities.html
@@ -42,7 +42,7 @@
         <br>
         <br>
         <br>
-        <div id="text">Starlight's Utilities</div>
+        <div class="text">Starlight's Utilities</div>
         <br>
     </body>
 </html><script src="/general/js/cloak.js"></script>
