--- a/general/pages/partnership.html
+++ b/general/pages/partnership.html
@@ -39,6 +39,8 @@
         <br>
         <br>
         <br>
+        <div class="text">Starlight's Partners</div>
+        <br>
        <main class="main">
         <section class="partners">
             <div class="partner" style="animation-delay: 0.1s;">
