--- a/general/pages/ai.html
+++ b/general/pages/ai.html
@@ -38,8 +38,8 @@
         </nav>
         <br>
         <br>
-        <br>
         <div class="text">Starlight's AI</div>
+        <center><h6>THANK U GROQ AI</h6></center>
         <br>
         <div class="chat-container">
             <div id="chat-box"></div>
