--- a/general/pages/arcade.html
+++ b/general/pages/arcade.html
@@ -37,7 +37,6 @@
         </nav>
         <br>
         <br>
-        <br>
         <div class="text">Starlight's Arcade</div>
         <br>
         <center>
@@ -75,164 +74,107 @@
               <br>
               <div class="row">
                 <div class="column" data-category="">
-                    <img src="/img/1.png">
+                    <a href=""><img src="/img/1.png">
                     <div class="description">
                         <h2>1</h2>
-                        <p>Simple puzzle game</p> <!-- Shortened description -->
+                        <p>Simple puzzle game</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <img src="/img/1v1.jpeg">
+                    <a href=""><img src="/img/1v1.jpeg">
                     <div class="description">
                         <h2>1v1.lol</h2>
-                        <p>Simple Battle royale game</p> <!-- Shortened description -->
+                        <p>Simple Battle royale game</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <img src="/img/1v1space.png">
+                    <a href=""><img src="/img/1v1space.png">
                     <div class="description">
                         <h2>1v1.space</h2>
-                        <p>Space game</p> <!-- Shortened description -->
+                        <p>Space game</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <img src="/img/ ">
+                    <a href=""><img src="/img/ ">
                     <div class="description">
                         <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
+                        <p> </p> <!-- Shortened description --></a>
+                    </div>
+                </div>[ <div class="column" data-category="">
+                    <a href=""><img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <img src="/img/ ">
+                    <a href=""><img src="/img/ ">
                     <div class="description">
                         <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
+                        <p> </p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <img src="/img/ ">
+                    <a href=""><img src="/img/ ">
                     <div class="description">
                         <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
+                        <p> </p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <img src="/img/ ">
+                    <a href=""><img src="/img/ ">
                     <div class="description">
                         <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
+                        <p> </p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <img src="/img/ ">
+                    <a href=""><img src="/img/ ">
                     <div class="description">
                         <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
+                        <p> </p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <img src="/img/ ">
+                    <a href=""><img src="/img/ ">
                     <div class="description">
                         <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
+                        <p> </p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <img src="/img/ ">
+                    <a href=""><img src="/img/ ">
                     <div class="description">
                         <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
+                        <p> </p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <img src="/img/ ">
+                    <a href=""><img src="/img/ ">
                     <div class="description">
                         <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
+                        <p> </p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <img src="/img/ ">
+                    <a href=""><img src="/img/ ">
                     <div class="description">
                         <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
+                        <p> </p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <img src="/img/ ">
+                    <a href=""><img src="/img/ ">
                     <div class="description">
                         <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
+                        <p> </p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <img src="/img/ ">
+                    <a href=""><img src="/img/ ">
                     <div class="description">
                         <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description -->
+                        <p> </p> <!-- Shortened description --></a>
                     </div>
                 </div>
             </div>
