--- a/general/pages/utilities.html
+++ b/general/pages/utilities.html
@@ -37,9 +37,85 @@
         </nav>
         <br>
         <br>
-        <br>
         <div class="text">Starlight's Utilities</div>
         <br>
+        <center>
+            <select id="categorySelect">
+                <option value="">All</option>
+                <option value="Tools">Tools</option>
+                <option value="Proxy">Proxy</option>
+                <option value="Emulators">Emulators</option>
+                <option value="Social">Social</option>
+                <option value="Other">Other</option>
+            </select>
+            </center>
+           <!--data-category="Tools"-->
+<!--data-category="Proxy"-->
+<!--data-category="Emulators"-->
+<!--data-category="Social"-->
+<!--data-category="Other"-->
+            <div class="search-bar">
+                <input type="text" id="search-input" placeholder="Search Our Apps Library...">
+                <button onclick="searchGames()">Search</button>
+              </div>
+              <br>
+              <div class="row">
+              <div class="column" data-category="">
+                <a href=""><img src="/img/ ">
+                <div class="description">
+                    <h2> </h2>
+                    <p> </p> <!-- Shortened description --></a>
+                </div>
+                 <div class="column" data-category="">
+                <a href=""><img src="/img/ ">
+                <div class="description">
+                    <h2> </h2>
+                    <p> </p> <!-- Shortened description --></a>
+                </div>
+                <div class="column" data-category="">
+                    <a href=""><img src="/img/ ">
+                    <div class="description">
+                        <h2> </h2>
+                        <p> </p> <!-- Shortened description --></a>
+                    </div>
+                    <div class="column" data-category="">
+                        <a href=""><img src="/img/ ">
+                        <div class="description">
+                            <h2> </h2>
+                            <p> </p> <!-- Shortened description --></a>
+                        </div>
+                        <div class="column" data-category="">
+                            <a href=""><img src="/img/ ">
+                            <div class="description">
+                                <h2> </h2>
+                                <p> </p> <!-- Shortened description --></a>
+                            </div>
+                            <div class="column" data-category="">
+                                <a href=""><img src="/img/ ">
+                                <div class="description">
+                                    <h2> </h2>
+                                    <p> </p> <!-- Shortened description --></a>
+                                </div>
+                                <div class="column" data-category="">
+                                    <a href=""><img src="/img/ ">
+                                    <div class="description">
+                                        <h2> </h2>
+                                        <p> </p> <!-- Shortened description --></a>
+                                    </div>
+                                    <div class="column" data-category="">
+                                        <a href=""><img src="/img/ ">
+                                        <div class="description">
+                                            <h2> </h2>
+                                            <p> </p> <!-- Shortened description --></a>
+                                        </div>
+                                        <div class="column" data-category="">
+                                            <a href=""><img src="/img/ ">
+                                            <div class="description">
+                                                <h2> </h2>
+                                                <p> </p> <!-- Shortened description --></a>
+                                            </div>
+            </div>
+        </div>
     </body>
 </html><script src="/general/js/cloak.js"></script>
     <!-- Include Particle.js library -->
