--- a/general/pages/arcade.html
+++ b/general/pages/arcade.html
@@ -100,7 +100,8 @@
                         <h2> </h2>
                         <p> </p> <!-- Shortened description --></a>
                     </div>
-                </div>[ <div class="column" data-category="">
+                </div>
+                <div class="column" data-category="">
                     <a href=""><img src="/img/ ">
                     <div class="description">
                         <h2> </h2>
