--- a/general/pages/ai.html
+++ b/general/pages/ai.html
@@ -39,8 +39,7 @@
         <br>
         <br>
         <div class="text">Starlight's AI</div>
-        <center><h6>THANK U GROQ AI</h6></center>
-        <br>
+        <i><center><h6>THANK U GROQ AI</h6></center></i>
         <div class="chat-container">
             <div id="chat-box"></div>
             <input type="text" id="user-input" placeholder="Enter your prompt here...">
