--- a/general/pages/dashboard.html
+++ b/general/pages/dashboard.html
@@ -57,6 +57,10 @@
             <a href="https://infamyy.vercel.app/" target="_blank"><button class="button">About me</button></a>&nbsp;&nbsp;&nbsp;
             <a href="/general/pages/policy.html"><button class="button">Policy</button></a>&nbsp;&nbsp;&nbsp;
            </center>
+           <br>
+           <center> 
+            <a href="/general/pages/search.html"><button class="button">Search</button></a>&nbsp;&nbsp;&nbsp;
+           </center>
        <br>
        <br>
        <br>
