--- a/general/index.html
+++ b/general/index.html
@@ -64,9 +64,9 @@
           <br>
           <br>
           <center>
-            <div style="padding: 40x; border-radius: 15px; background-color: #1f1f1f; width: 30%; padding-top: 25px; padding-bottom: 25px; box-shadow: 0px 12px 36px rgba(33, 33, 33, 0.5); /* Slightly increase shadow on lift */">
+            <div id="ads" style="padding: 40x; border-radius: 15px; background-color: #1f1f1f; width: 30%; padding-top: 25px; padding-bottom: 25px; box-shadow: 0px 12px 36px rgba(33, 33, 33, 0.5); /* Slightly increase shadow on lift */">
     
-            <p id="ads"><b style="color: rgb(124, 124, 124);">Ads open for sale</b></p>
+            <p><b style="color: rgb(124, 124, 124);">Ads open for sale</b></p>
           </div>
           </center>
 <script src="/general/js/cloak.js"></script>
