--- a/general/pages/search.html
+++ b/general/pages/search.html
@@ -45,7 +45,7 @@
                 <button id="reloadButton">Reload</button>
                 <button id="openDirectButton">Open Direct</button>
             </div>
-            <iframe id="webFrame" class="loading" src="https://bigpanera.vercel.app" frameborder="0"></iframe>
+            <iframe id="webFrame" class="loading" src="/general/pages/prox.html" frameborder="0"></iframe>
         </div>
     
     </body>
