--- a/general/pages/arcade.html
+++ b/general/pages/arcade.html
@@ -74,108 +74,59 @@
               <br>
               <div class="row">
                 <div class="column" data-category="">
-                    <a href=""><img src="/img/1.png">
+                    <a href=""><img src="/img/imgs/1.png">
                     <div class="description">
                         <h2>1</h2>
                         <p>Simple puzzle game</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <a href=""><img src="/img/1v1.jpeg">
+                    <a href=""><img src="/img/imgs/1v1.jpeg">
                     <div class="description">
                         <h2>1v1.lol</h2>
                         <p>Simple Battle royale game</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <a href=""><img src="/img/1v1space.png">
+                    <a href=""><img src="/img/imgs/1v1space.png">
                     <div class="description">
                         <h2>1v1.space</h2>
                         <p>Space game</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
+                    <a href=""><img src="/img/imgs/imgs/8ball.jpeg ">
                     <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
+                        <h2>8ball Billards Class</h2>
+                        <p>Simple pool game</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
+                    <a href=""><img src="/img/imgs/imgs/10minutestilldawn.jpeg">
                     <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
+                        <h2>10 Minutes Till Dawn</h2>
+                        <p>Survive 10 minutes from something idk</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
+                    <a href=""><img src="/img/imgs/imgs/100ng.png">
                     <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
+                        <h2>100ng</h2>
+                        <p>very old game</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
+                    <a href=""><img src="/img/imgs/imgs/2020.png">
                     <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
+                        <h2>2020 game</h2>
+                        <p>a game that takes place in 2020</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
+                    <a href=""><img src="/img/imgs/imgs/2048.png">
                     <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
+                        <h2>2048</h2>
+                        <p>Puzzle game</p> <!-- Shortened description --></a>
                     </div>
                 </div>
             </div>
