--- a/general/pages/settings.html
+++ b/general/pages/settings.html
@@ -71,10 +71,21 @@
             <h2 id="faviconDropdownHeader">Tab Cloak</h2>
 <br>
             <select id="faviconSelect">
-                <option value="">--Select a Favicon--</option>
-                <option value="https://www.google.com/favicon.ico">Google</option>
-                <option value="https://classroom.google.com/favicon.ico">Google Classroom</option>
-                <option value="https://example.com/favicon.ico">Example Favicon</option> <!-- Add more as needed -->
+                <option value="/general/img/starlight.png">--Select a Favicon--</option>
+                <option value="/img/favicons/google.png">Google</option>
+                <option value="/img/favicons/google-class.webp">Google Classroom</option>
+                <option value="/img/favicons/bingg.png">Bing</option> <!-- Add more as needed -->
+                <option value="/img/favicons/google-drive.webp">Google Drive</option> <!-- Add more as needed -->
+                <option value="/img/favicons/google-docs.webp">Google Docs</option> <!-- Add more as needed -->
+                <option value="/img/favicons/google-keep.ico">Google Keep</option> <!-- Add more as needed -->
+                <option value="/img/favicons/google-sheets.ico">Google Sheets</option> <!-- Add more as needed -->
+                <option value="/img/favicons/google-slides.ico">Google Slides</option> <!-- Add more as needed -->
+                <option value="/img/favicons/ixll.png">Ixl</option> <!-- Add more as needed -->
+                <option value="/img/favicons/khanacademy.ico">Khan Academy</option> <!-- Add more as needed -->
+                <option value="/img/favicons/pornhub.png">Pornhub</option> <!-- Add more as needed -->
+                <option value="/img/favicons/Wikipedia.ico">Wikipedia</option> <!-- Add more as needed -->
+                <option value="/img/favicons/gmail.ico">Gmail</option> <!-- Add more as needed -->
+            
             </select>
             <button id="saveFaviconSelect">Save</button>
         </div>
