--- a/general/pages/utilities.html
+++ b/general/pages/utilities.html
@@ -61,87 +61,38 @@
               <br>
               <div class="row">
                 <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
+                    <a href=""><img src="/img/imgs/imgs/youtube.jpeg">
                     <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
+                        <h2>Youtube</h2>
+                        <p>videos stuff</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
+                    <a href=""><img src="/img/imgs/imgs/lagged.avif">
                     <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
+                        <h2>Lagged.com</h2>
+                        <p>GAMING WEBSITE</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
+                    <a href=""><img src="/img/imgs/imgs/wrnd.png">
                     <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
+                        <h2>Equinox</h2>
+                        <p>Very fast proxy site</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
+                    <a href=""><img src="/img/imgs/imgs/interstellar.png">
                     <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
+                        <h2>Interstellar</h2>
+                        <p>Very slow proxy site</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
+                    <a href=""><img src="/img/imgs/imgs/doge.jpg">
                     <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
+                        <h2>Doge Unblocker</h2>
+                        <p>Very fast proxy site better than interstellar</p> <!-- Shortened description --></a>
                     </div>
                 </div>
             </div>
