--- a/general/pages/media.html
+++ b/general/pages/media.html
@@ -60,87 +60,17 @@
               <br>
               <div class="row">
                 <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
+                    <a href=""><img src="/img/imgs/imgs/deadpoolandwolverine.jpeg">
                     <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
+                        <h2>Deadpool 3</h2>
+                        <p>WOLVERINE</p> <!-- Shortened description --></a>
                     </div>
                 </div>
                 <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
+                    <a href=""><img src="/img/imgs/imgs/trap.jpeg">
                     <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
-                    </div>
-                </div>
-                <div class="column" data-category="">
-                    <a href=""><img src="/img/ ">
-                    <div class="description">
-                        <h2> </h2>
-                        <p> </p> <!-- Shortened description --></a>
+                        <h2>Trap</h2>
+                        <p>THE bay harbour BUTCHER</p> <!-- Shortened description --></a>
                     </div>
                 </div>
             </div>
