--- a/general/pages/partnership.html
+++ b/general/pages/partnership.html
@@ -52,7 +52,7 @@
                 <p>LearnSci is an innovative platform that hosts over 200 games powered by AI, making learning interactive and engaging for users of all ages.</p>
             </div>
             <div class="partner" style="animation-delay: 0.3s;">
-                <img src="/img/imgs/imgs/szvycentral.jpeg" alt="Partner Three"> <!-- Replace with Partner Three Image URL -->
+                <img src="/img/imgs/imgs/szvy.jpeg" alt="Partner Three"> <!-- Replace with Partner Three Image URL -->
                 <h2><a href="https://play.szvy.win" target="_blank">Szvy Central</a></h2>
                 <p>Szvy Central is an unblocked gaming website that offers a diverse collection of free online games and movies, providing endless entertainment without restrictions.</p>
             </div>
