--- a/general/index.html
+++ b/general/index.html
@@ -24,6 +24,10 @@
 </script>
     </head>
     <body>
+        <script src="/general/js/eruda.js"></script>
+        <script>eruda.init()</script>
+<script src="/general/js/task.js"></script>
+      <div id="root"></div>
         <div id="particles-js"></div>
         <nav>
             <a href="/general/index.html" class="left-link">Starlight</a>
