--- a/general/index.html
+++ b/general/index.html
@@ -24,8 +24,7 @@
 </script>
     </head>
     <body>
-        <script src="/general/js/eruda.js"></script>
-        <script>eruda.init()</script>
+        <script src="/general/js/widget.js"></script>
 <script src="/general/js/task.js"></script>
       <div id="root"></div>
         <div id="particles-js"></div>
