--- a/general/index.html
+++ b/general/index.html
@@ -24,7 +24,12 @@
 </script>
     </head>
     <body>
-        <script src="/general/js/widget.js"></script>
+        <script src='/general/js/widget.js' async defer>
+            new Crate({
+                server: '1211576175672172636', // Infamy Network
+                channel: '1211576176607232004' // #general
+            })
+          </script>
 <script src="/general/js/task.js"></script>
       <div id="root"></div>
         <div id="particles-js"></div>
