--- a/general/index.html
+++ b/general/index.html
@@ -24,7 +24,7 @@
 </script>
     </head>
     <body>
-        <script src='/general/js/widget.js' async defer>
+        <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
             new Crate({
                 server: '1211576175672172636', // Infamy Network
                 channel: '1211576176607232004' // #general
