--- a/general/index.html
+++ b/general/index.html
@@ -24,14 +24,9 @@
 </script>
     </head>
     <body>
-        <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
-            new Crate({
-                server: '1211576175672172636', // Infamy Network
-                channel: '1211576176607232004' // #general
-            })
-          </script>
-<script src="/general/js/task.js"></script>
-      <div id="root"></div>
+      
+<script src="/general/js/eruda.js"></script>
+<script>eruda.init();</script>
         <div id="particles-js"></div>
         <nav>
             <a href="/general/index.html" class="left-link">Starlight</a>
