--- a/general/index.html
+++ b/general/index.html
@@ -23,7 +23,7 @@
   gtag('config', 'G-36EM66LHER');
 </script>
     </head>
-    <body>
+    <body style="overflow: hidden;">
       
 <script src="/general/js/eruda.js"></script>
 <script>eruda.init();</script>
